--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <div class="changelog">
     <h1>Что нового</h1>
     <p>Все апдейты.</p>
+    <h2>0.0.4</h2>
+    <p>Крупное обновление! Добавлено очень много контента: боссфайты, классный сюжет, нёрфы, баффы, твисты и многое другое! Отличного вам времяпрепровождения! И еще если в менюшке нажать на юни(фиолетового дауна) то будет яйку.</p>
     <h2>0.0.3</h2>
     <p>Долгожданное обновление. Добавлен классный босс файт с зесом, новая секретная локация, зелье превращения (в диалоге) и меню для бета тестеров.</p>
     <h2>0.0.2</h2>
